--- a/src/app/pages/admin/airport/airport.component.html
+++ b/src/app/pages/admin/airport/airport.component.html
@@ -1,1 +1,37 @@
-<p>airport works!</p>
+<div class="row">
+    <div class="add-col">
+        <button class="btn-success" (click)="addNew()">Add New</button>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Sr No</th>
+                    <th>Airport Code</th>
+                    <th>Airport Name</th>
+                    <th>City</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let airport of airportList; let sr = index">
+                    <td>
+                        {{sr+1}}
+                    </td>
+                    <td>
+                        <input type="text" [(ngModel)]="airport.airportCode" placeholder="Enter Airport Code">
+                    </td>
+                    <td>
+                        <input type="text" [(ngModel)]="airport.airportName" placeholder="Enter Airport Name">
+                    </td>
+                    <td>
+                        <input type="text" [(ngModel)]="airport.cityName" placeholder="Enter Airport Name">
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
