--- a/src/app/pages/admin/city/city.component.html
+++ b/src/app/pages/admin/city/city.component.html
@@ -1,1 +1,29 @@
-<p>city works!</p>
+<div class="row">
+    <div class="add-col">
+        <button class="btn-success" (click)="addNew()">Add New</button>
+        <button class="btn-success" (click)="bulkUpdate()">Bulk Update</button>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Sr No</th>
+                    <th>City Name</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let city of cityList; let sr = index">
+                    <td>
+                        {{sr+1}}
+                    </td>
+                    <td>
+                        <input type="text" [(ngModel)]="city.cityName" placeholder="Enter City Name">
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
